wow, having fun

--- a/more-examples/basic/assets/css/basic.css
+++ b/more-examples/basic/assets/css/basic.css
@@ -1,5 +1,8 @@
+.slide-deck.hint {
+  background-color: #ffe6e6;
+}
 .slide-deck {
-   background-color: #ffe6e6;
+   /*background-color: #ffe6e6;*/
    width: 90vw;
    height: 45vw;
    margin: auto;
@@ -9,18 +12,35 @@
 section>h1.title-slide {
   font-size: 8vw;
   font-weight: 400;
-  margin-top:0;
-  margin-bottom:0;
+  margin-top:0vw;
+  margin-bottom:0vw;
 }
-section>h2,h3,h4,h5,h6 {
+section>h1,h2,h3,h4,h5,h6 {
+  margin-top:0;
   font-weight: 300;
 }
 .slide-deck section {
-  /*display: none;*/
   line-height: 1.2;
   margin:0;
   font-weight: 300;
   font-family: 'News Cycle', sans-serif;
   font-size: 3vw;
   color: black;
+}
+section {
+  display: none;
+}
+#page-counter {
+  font-size: 1.5vw;
+  position: absolute;
+  right: 1vw;
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+figcaption {
+  font-size: 3vw;
 }
