--- a/more-examples/basic/assets/css/basic.css
+++ b/more-examples/basic/assets/css/basic.css
@@ -4,16 +4,18 @@
 .slide-deck {
    /*background-color: #ffe6e6;*/
    width: 90vw;
-   height: 45vw;
+   height: 50vw;
    margin: auto;
    margin-top: 0vw;
    margin-bottom: 0vw;
 }
 section>h1.title-slide {
-  font-size: 8vw;
+  line-height: 1.1;
+  font-size: 7vw;
   font-weight: 400;
   margin-top:0vw;
   margin-bottom:0vw;
+  font-family: 'News Cycle', sans-serif;
 }
 section>h1,h2,h3,h4,h5,h6 {
   margin-top:0;
@@ -23,8 +25,8 @@ section>h1,h2,h3,h4,h5,h6 {
   line-height: 1.2;
   margin:0;
   font-weight: 300;
-  font-family: 'News Cycle', sans-serif;
-  font-size: 3vw;
+  font-family: 'Roboto', sans-serif;
+  font-size: 2.5vw;
   color: black;
 }
 section {
