--- a/more-examples/dissertation/assets/css/basic.css
+++ b/more-examples/dissertation/assets/css/basic.css
@@ -26,7 +26,7 @@ section>h1,h2,h3,h4,h5,h6 {
   margin:0;
   font-weight: 300;
   font-family: 'Roboto', sans-serif;
-  font-size: 2.5vw;
+  font-size: 2.0vw;
   color: black;
 }
 section {
@@ -44,8 +44,11 @@ section {
   width: 50%;
 }
 figcaption {
-  font-size: 3vw;
+  font-size: 1.5vw;
 }
-section li {
+ul.far li {
   margin-bottom: 3vw;
+}
+ul.med li {
+  margin-bottom: 1.5vw;
 }
