--- a/more-examples/dissertation/assets/css/basic.css
+++ b/more-examples/dissertation/assets/css/basic.css
@@ -1,21 +1,27 @@
+:root {
+  --main-width: 65vw; /* 65vw is best for 16:9 screens. for 4:3 screens, try 100vw. */
+}
 .slide-deck.hint {
-  background-color: #ffe6e6;
+  border: solid 1px grey;
 }
 .slide-deck {
    /*background-color: #ffe6e6;*/
-   width: 90vw;
-   height: 50vw;
+   width: var(--main-width);
+   height: calc(var(--main-width) * 0.75);
    margin: auto;
    margin-top: 0vw;
    margin-bottom: 0vw;
 }
-section>h1.title-slide {
+section .title-slide {
   line-height: 1.1;
   font-size: 7vw;
   font-weight: 400;
   margin-top:0vw;
   margin-bottom:0vw;
   font-family: 'News Cycle', sans-serif;
+}
+section h2.title-slide {
+  font-size: 6vw;
 }
 section>h1,h2,h3,h4,h5,h6 {
   margin-top:0;
